tests/paczka2/big_fuzzy/27061600.err
Error in line 5: b4lPIaOr A690 99,8
Error in line 9: A690 A422 29,9
Error in line 28: yvTfuKsFme A595 5,9
Error in line 39: yvTfuKsFme A595 84,2
Error in line 36: RQNvopubk A595 8,5
Error in line 42: X3o A690 35,0
Error in line 47: yvTfuKsFme A422 42,9
Error in line 34: A690 A422 38,6
Error in line 40: da1yy8rnJPE A690 7,3
Error in line 44: X3o A422 16,6
Error in line 60: RQNvopubk A422 15,1
Error in line 52: X3o A661 85,7
Error in line 69: RQNvopubk A661 1,72
Error in line 80: A690 A661 97,7
Error in line 86: yvTfuKsFme A661 -4,9
Error in line 88: da1yy8rnJPE A595 332,2
Error in line 82: A690 A595 24,3
Error in line 92: A690 A422 31,7
Error in line 93: A690 A661 55,8
Error in line 84: yvTfuKsFme A661 51,8
Error in line 103: yvTfuKsFme A422 88,2
Error in line 117: 71x7D A595 52,48
Error in line 119: RQNvopubk A661 95,0
Error in line 107: X3o A595 168,5
Error in line 120: da1yy8rnJPE A595 884,5
Error in line 150: X3o A422 62,7
Error in line 126: 71x7D A595 121,4
Error in line 164: RQNvopubk A661 44,1
Error in line 177: X3o A661 78,7
Error in line 180: yvTfuKsFme A4QQ 359,3
Error in line 161: yvTfuKsFme A422 173,2
Error in line 178: X3o A690 20,0
Error in line 184: X3o A595 92,3
Error in line 189: da1yy8rnJPE A690 15,3
Error in line 193: yvTfuKsFme A6u0 3,2
Error in line 183: yvTfuKsFme A690 17,5
Error in line 196: X3o A422 42,#
Error in line 197: X3o A422 79,9
Error in line 219: da1yy8rnJPE A690 77,9
Error in line 220: da1yy8rnJPE A422 70,0
Error in line 221: da1yy8rnJPE A690 84,9
Error in line 237: X3o A595 22,7
Error in line 242: da1yy8rnJPE A661 349,41
Error in line 229: A690 A690 83,5
Error in line 240: 71x7D A595 33,4
